examples/test/testpolicy13908.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13908
  namespace: namespace489
spec:
  podSelector:
    matchLabels:
      key10: value20
      key0: value33
      key47: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value43
      podSelector:
        matchLabels:
          key24: value23
          key7: value25
